Updates from Overleaf

--- a/paper/sample-papers/sections/4-iris-data/table_threshold.tex
+++ b/paper/sample-papers/sections/4-iris-data/table_threshold.tex
@@ -12,66 +12,114 @@
 \hline
 \hline
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \hline
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
-\multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\multicolumn{2}{l|}{\textbf{DT}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \hline
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \multicolumn{2}{l|}{\textbf{KNN}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \hline
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \multicolumn{2}{l|}{\textbf{Ada}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            & $+$        &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            & $-$        & $-$        &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \hline
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \multicolumn{2}{l|}{\textbf{GNB}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \hline
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \hline
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $-$        &            &            & $-$        &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            & $-$        &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            & $+$        & $+$        &            & $+$        &            &            &            &            &            &            &            &             \\
 
 \hline
-\multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\multicolumn{2}{l|}{\textbf{RF}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \hline
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \multicolumn{2}{l|}{\textbf{QDA}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 
 \hline
 \hline
