--- a/paper/sample-papers/sections/04-07-wineR.tex
+++ b/paper/sample-papers/sections/04-07-wineR.tex
@@ -1,4 +1,4 @@
-\subsection{wineRed}\footnote{\textcolor{red}{Check classes. Why do we have 8 classes here?}}
+%\subsection{wineRed}\footnote{\textcolor{red}{Check classes. Why do we have 8 classes here?}}
 
 
 \include{paper/sample-papers/sections/7-wineR-data/plots}
