--- a/paper/sample-papers/sections/04-08-wineW.tex
+++ b/paper/sample-papers/sections/04-08-wineW.tex
@@ -1,4 +1,4 @@
-\subsection{wineW}\footnote{\textcolor{red}{Check classes. Why do we have 8 classes here?}}
+%\subsection{wineW}\footnote{\textcolor{red}{Check classes. Why do we have 8 classes here?}}
 
 
 
